--- a/assets/scss/relay.scss
+++ b/assets/scss/relay.scss
@@ -1,12 +1,12 @@
-body {
+
+
+.all-block{
     background: #0f3854;
     background: radial-gradient(ellipse at center,  #0a2e38  0%, #000000 70%);
     height: 100vh;
-    width: 100vw;
-    
+    // width: 100%;
+
 }
-
-
 
 
 
@@ -19,6 +19,11 @@ body {
 	  background-repeat: no-repeat;
 	  background-position: center;
 	  margin: auto;
+
+		@include media-breakpoint-down(md) {
+		  height: 60px;
+		  width: 60px;
+			}
 
 		i{
 			font-size: 25px;
@@ -37,19 +42,76 @@ body {
 	  text-align: center;
 	  cursor: pointer;
 	  color: black;	  
+	  box-shadow: 0px 0px 20px 1px #555555;
+  		@include media-breakpoint-down(md) {
+		  height: 60px;
+		  width: 60px;
+			}
 	}
 
 	.on {
-	  background: #28a745;
-
-        box-shadow: 0px 0px 20px 1px #fbfbfb;
-
+	  background: #28a745;    
+		box-shadow: 0px 0px 20px 1px #fbfbfb;
 	  background-image: url("../images/lamp-white-60.png");
 	  background-repeat: no-repeat;
 	  background-position: center;
+		@include media-breakpoint-down(md) {
+		  height: 60px;
+		  width: 60px;
+		}
 	}
 
 }
+
+
+.element-block{
+
+	display: grid;
+	display: grid;
+	grid-template-rows:    repeat(2, auto);
+	grid-template-columns: repeat(4, 1fr);
+
+
+		@include media-breakpoint-down(md) {
+			grid-template-rows:    repeat(2, auto);
+			grid-template-columns: repeat(4, 1fr);
+
+		padding-top: 10px;
+		}
+
+		@include media-breakpoint-down(sm) {
+			grid-template-rows:    repeat(4, 150px);
+			grid-template-columns: repeat(2, 1fr);
+			padding-top: 50px;
+		}
+
+
+
+	.element{
+		width: 200px;
+		height: 200px;
+		background: rgb(48,48,48);
+		background: linear-gradient(90deg, rgba(48,48,48,1) 35%, rgba(17,17,17,1) 100%);
+		padding-top: 50px;
+		margin-bottom: 30px;
+    	border-radius: 5%;
+    	justify-self: center;
+
+
+
+    	@include media-breakpoint-down(md) {
+			width: 100px;
+			height: 100px;
+			padding-top: 20px;
+			justify-self: center;
+		}
+	}
+}
+
+
+
+
+
 
 // relay button END
 
@@ -60,12 +122,11 @@ body {
 	justify-content: space-between;
 
 	.only-date{
-		float: right;
+		
 		align-self: flex-end;
 	}
 
 	.only-clock{
-		float: left;
 		order: -1;
 	}
 
@@ -80,6 +141,10 @@ body {
     // text-align: center;
     color: white;
     font-size: 90px;
+    font-weight: bold;
+		@include media-breakpoint-down(md) {
+			font-size: 30px;
+		}
 }
 
 #date {
@@ -89,6 +154,9 @@ body {
     // text-align: center;
     color: white;
     font-size: 20px;
+		@include media-breakpoint-down(md) {
+			font-size: 16px;
+		}
 }
 
 
@@ -98,27 +166,6 @@ body {
 
 
 
-.important {
-  font-weight: bold;
-  font-size: xx-large;
-}
 
 
 
-
-.element-block{
-	display: flex;
-	justify-content: space-between;
-	padding-top: 50px;
-	flex-wrap: wrap;
-
-	.element{
-		width: 200px;
-		height: 200px;
-		background: rgb(48,48,48);
-		background: linear-gradient(90deg, rgba(48,48,48,1) 35%, rgba(17,17,17,1) 100%);
-		padding-top: 50px;
-		margin-bottom: 30px;
-    	border-radius: 5%;
-	}
-}
