--- a/assets/scss/relay.scss
+++ b/assets/scss/relay.scss
@@ -23,7 +23,12 @@
 		@include media-breakpoint-down(md) {
 		  height: 60px;
 		  width: 60px;
-			}
+		}
+
+  		@include media-breakpoint-down(sm) {
+		  height: 40px;
+		  width: 40px;
+		}
 
 		i{
 			font-size: 25px;
@@ -47,6 +52,11 @@
 		  height: 60px;
 		  width: 60px;
 			}
+
+  		@include media-breakpoint-down(sm) {
+		  height: 40px;
+		  width: 40px;
+			}
 	}
 
 	.on {
@@ -59,6 +69,10 @@
 		  height: 60px;
 		  width: 60px;
 		}
+  		@include media-breakpoint-down(sm) {
+		  height: 40px;
+		  width: 40px;
+			}
 	}
 
 }
@@ -66,7 +80,6 @@
 
 .element-block{
 
-	display: grid;
 	display: grid;
 	grid-template-rows:    repeat(2, auto);
 	grid-template-columns: repeat(4, 1fr);
@@ -80,7 +93,7 @@
 		}
 
 		@include media-breakpoint-down(sm) {
-			grid-template-rows:    repeat(4, 150px);
+			grid-template-rows:    repeat(4, 120px);
 			grid-template-columns: repeat(2, 1fr);
 			padding-top: 50px;
 		}
@@ -97,14 +110,16 @@
     	border-radius: 5%;
     	justify-self: center;
 
-
-
     	@include media-breakpoint-down(md) {
 			width: 100px;
 			height: 100px;
 			padding-top: 20px;
 			justify-self: center;
 		}
+  		@include media-breakpoint-down(sm) {
+		  height: 80%;
+		  width: 80%;
+			}
 	}
 }
 
